Fixed almost all Webhint warnings and added accessibility
Most Webhint warnings were "noreferrer" missing on "a" tags. Added the "noreferrer" property to "rel" inside most "a" tags.

Added a little spacing in the "head" of the page, just for comfort when reading it.

Added explicit but short "alt" descriptions inside important images.

Removed useless "alt" descriptions that may be disorienting for people with screen readers.

Removed fixed height of 95vh from the landing page container, as it served no propose and caused some visual overlap of text at zoom 500%*

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,6 @@ li {
   display: flex;
   align-items: stretch;
   flex-direction: column;
-  height: 95vh;
   margin: 0%;
   padding: 8%;
   background-image: url("Images/header-illsutration-mobile.svg");
